fixed flexbox squished images on firefox

--- a/stylesheets/_home.scss
+++ b/stylesheets/_home.scss
@@ -133,7 +133,7 @@ ul.homepage-resources {
       border-bottom: none;
     }
     img {
-      max-width:150px;
+      width:150px;
       margin-right: 10px;
     }
     i {
